This fixes the edit view on mobile, it seemed to be dragging over the td cells.

--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -35,3 +35,9 @@ body p{
   flex-direction: row;
   justify-content: space-around;
 }
+
+textarea.editarea {
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+}
